Fix alignment issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,19 +35,26 @@ body {
   visibility: hidden;
   display: flex;
   flex-direction: column;
-  padding: 25px 25px 12px 25px;
+  margin-top: 10px;
+  padding: 18px;
+  border: 5px solid var(--light-gray);
+  background: var(--feldgrau);
+  color: white;
 }
 
-#direction-line {
+.direction-line {
   display: flex;
-  justify-content: center;
-  gap: 12px;
 }
 
 .information button {
   margin: auto;
   width: 100%;
-  padding: 6px;
+}
+
+#direction {
+  display: inline-block;
+  width: 100px;
+  font-weight: bold;
 }
 
 button {
@@ -77,6 +84,9 @@ h2 {
 
 #random-board {
   visibility: hidden;
+  width: fit-content;
+  margin: auto;
+  margin-top: 15px;
 }
 
 .player-board,
@@ -89,13 +99,16 @@ h2 {
 .player,
 .cpu {
   width: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .space {
   height: 50px;
   width: 50px;
   background: var(--feldgrau);
-  border: solid 1px black;
+  border: solid 1px var(--light-gray);
   color: white;
 }
 
@@ -115,11 +128,15 @@ h2 {
 .results {
   display: flex;
   flex-direction: column-reverse;
-  height: 400px;
+  height: 520px;
   overflow: scroll;
   width: 300px;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+#new-game {
+  width: 200px;
 }
 
 .empty {
@@ -132,13 +149,15 @@ h2 {
   gap: 50px;
   user-select: none;
   font-weight: bold;
+  height: 25px;
 }
 
 .player .ships {
   cursor: pointer;
 }
 
-.player-instruction {
+.player-instruction,
+#manual-message {
   font-weight: bold;
   font-size: 1.2rem;
 }
